themes/inbeat/assets/scss/pages/_mockup-builders.scss
/* ... */
.mockup-controls{
    margin-top: 62px;
    display: flex;
    gap: 22px;
    .control-dropdown-trigger{
        display: flex;
        align-items: center;
        justify-content: space-between;
        gap: 28px;
        border: 1px solid #535562;
        border-radius: 6px;
        padding: 6px 20px;
        cursor: pointer;
    }
}
.mockup-btn{
  color: #FFFFFF;
  background: #000000;
  border-radius: 4px;
  display: flex;
  align-items: center;
  padding: 6px 12px;
  gap: 10px;
  border: none;
  font-weight: 500;
  font-size: 16px;
  line-height: 38px;
  letter-spacing: -0.596318px;
  height: fit-content;
  cursor: pointer;
}
.label{
  font-weight: 600;
  font-size: 16px;
  line-height: 26px;
  letter-spacing: 0.3px;
  color: #535562;
  display: block;
}
.profile__input-wrapper{
  display: flex;
  flex-direction: column;
  margin-top: 32px;
  .uploader-wrapper{
    display: flex;
    gap: 8px;
    margin-top: 8px;
  }
} 
.mockup-input{
  border: 1px solid #BBBBBB;
  border-radius: 4px;
  padding: 12px 14px;
  font-size: 16px;
  line-height: 26px;
  letter-spacing: 0.3px;
  width: -webkit-fill-available;
  &:focus{
    outline: none;
  }
}
.input-wrapper{
  flex: 1 1 auto;
}
.upload_profile-picture-btn{
  padding: 12px 24px;
}
.mockup__configuration-dropzone-wrapper{
  margin-top: 36px;
  font-weight: 600;
  font-size: 16px;
  line-height: 26px;
  letter-spacing: 0.3px;
  color: #535562;
  .mockup__description{
    margin-bottom: 8px !important;
  }
}
.mockup__file-uploader {
  cursor: pointer;
  input[type='file'] {
    height: 0.1px;
    opacity: 0;
    overflow: hidden;
    position: absolute;
    z-index: -1;
    width: 0.1px;
  }

  .file--upload__draggable {
    cursor: pointer;
    padding: 0.25em;

    border: 1px dashed #BBBBBB;
    border-radius: 4px;    
    display: flex;
    align-items: center;
    justify-content: center;
  }

  &.mockup-drag-enter {
    background-color: rgba(177, 176, 176, 0.486);

    // to prevent dragleave event triggered while user dragging over child items
    .file--upload__draggable::before {
      content: '';
      position: absolute;
      top: 0;
      bottom: 0;
      width: 100%;
      height: 100%;
      z-index: 9999999;
    }
  }
}

.mockup-dropdown{
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 28px;
  border: 1px solid #BBBBBB;
  border-radius: 4px;
  padding: 12px 14px;
  cursor: pointer;
  width: 100%;
  position: relative;
  a{
      font-weight: 500;
      font-size: 16px;
      line-height: 26px;  
      display: flex;
      align-items: center;
  }
}
.mockup_dropdown-wrapper{

  display: flex;
  align-items: center;
  cursor: pointer;
  position: relative;
  a{
      text-decoration: none;
      gap: 10px;
  }
  .dropdown-icon{
      margin-left: 8px;
  }
  .mockup-dropdown__dropdown-list{
      background: #FFFFFF;
      border: 1px solid #DCDCDC;
      box-shadow: 0px 4px 11px rgba(0, 0, 0, 0.2);
      border-radius: 8px;
      list-style: none;
      padding:0;
      position: absolute;
      left: 0;
      right: 0;
      top: 15%;
      z-index: 999;
      display: block;
      margin-top: 3rem;
      .list-item{
          padding: 8px 12px;
          display: flex;
          align-items: center;
          gap: 6px;
          line-height: 0;
          p{
              margin: 0;
              font-weight: 400;
              font-size: 14px;
              line-height: 22px; 
              color: #000000;
              span{
                  opacity: 0.5;
              }
          }
          &:hover{
              background-color: #F9F7F7;
          }
      }
  }
}
.mockup__configuration-ad-action{
  margin-top: 36px;
.mockup_dropdown-wrapper{
  margin-top: 12px;
}
}
.mockup__configuration-like-count{
  margin-top: 36px;
  .likes-count-input{
    margin-top: 12px;
    border: 1px solid #BBBBBB;
    border-radius: 4px;
    padding: 12px 14px;
    font-size: 16px;
    line-height: 26px;
    letter-spacing: 0.3px;
    width: -webkit-fill-available;
    &:focus{
      outline: none;
    }
  }
}
.mockup__configuration-message-wrapper{
  margin-top: 36px;
  .message-textarea{
    margin-top: 12px;
    border: 1px solid #BBBBBB;
  border-radius: 4px;
  padding: 12px 14px;
    font-size: 16px;
    line-height: 26px;
    letter-spacing: 0.3px;
    width: -webkit-fill-available;
    &:focus{
      outline: none;
    }
  }
}
.mockup__preview-section{
  padding-left: 3rem;
  background: #F9F7F7;
  border-radius: 1px;
  padding: 44px;
  @include breakpoint(sm-down) {
    width: 100%;
    padding: 0;
    margin-top: 24px;
}
}
.mockup-preview-wrapper{
  background: #FFFFFF;
  border: 0.988728px solid #E5E5E5;
filter: drop-shadow(0px 2.48448px 6.83233px rgba(0, 0, 0, 0.1));
border-radius: 3.95491px;
}
.preview-nav{
  padding: 12px 16px 6px 12px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: #FAFAFA;
  border-bottom:0.537486px solid #AFAFAF;
  overflow: hidden;
  div{
    display: flex;
    align-items: center;
    gap: 21px;
  }
}
/* ... */

